# okf-simple

./: .gitignore  CLAUDE.md  README.md  SKILLS.md  SPEC.md  pyproject.toml
.agents/prompts/: remove-fetch-url.md
.agents/skills/okf_simple/: SKILL.md
bundles/: .txt
src/okf/: __init__.py  cli.py
src/okf/bundle/: index.py  synthesizer.py
src/okf/prompts/: reference_instruction.md  web_ingestion_instruction.md
src/okf/tools/: bundle_tools.py  context.py  web_tools.py
src/okf/viewer/: generator.py
src/okf/viewer/static/: viz.js
src/reference_agent/: __init__.py  cli.py
src/reference_agent/prompts/: reference_instruction.md  web_ingestion_instruction.md
src/reference_agent/tools/: web_tools.py
tests/: test_bundle_tools.py  test_document.py  test_index.py  test_viewer.py  test_web_fetcher.py  test_web_tools.py
