[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okf"
version = "0.1.0"
description = "Open Knowledge Format — a minimal, human-and-agent-friendly format for representing knowledge"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "markdownify>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
okf = "okf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
okf = ["prompts/*.md", "viewer/templates/*.html", "viewer/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
